# qkernel

./: .gitignore  ALPHA_README.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_OUTPUT_v0_10.txt  DEV_OUTPUT_v0_11.txt  DEV_OUTPUT_v0_12.txt  DEV_OUTPUT_v0_13.txt  DEV_OUTPUT_v0_14.txt  DEV_OUTPUT_v0_15.txt  DEV_OUTPUT_v0_16.txt  DEV_OUTPUT_v0_17.txt  DEV_OUTPUT_v0_18.txt  DEV_OUTPUT_v0_19.txt  DEV_OUTPUT_v0_2.txt  DEV_OUTPUT_v0_20.txt  DEV_OUTPUT_v0_21.txt  DEV_OUTPUT_v0_22.txt  DEV_OUTPUT_v0_23.txt  DEV_OUTPUT_v0_24.txt  DEV_OUTPUT_v0_25.txt  DEV_OUTPUT_v0_26.txt  DEV_OUTPUT_v0_27.txt  DEV_OUTPUT_v0_28.txt  DEV_OUTPUT_v0_29.txt  DEV_OUTPUT_v0_3.txt  DEV_OUTPUT_v0_30.txt  DEV_OUTPUT_v0_31.txt  DEV_OUTPUT_v0_32.txt  DEV_OUTPUT_v0_33.txt  DEV_OUTPUT_v0_4.txt  DEV_OUTPUT_v0_5.txt  DEV_OUTPUT_v0_6.txt  DEV_OUTPUT_v0_7.txt  DEV_OUTPUT_v0_8.txt  DEV_OUTPUT_v0_9.txt  LICENSE  MANIFEST.in  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ACTIVATION.md  ADJACENT_REPO_DECISION.md  ALPHA_QUICKSTART.md  APPLICATIONS.md  APPLICATION_PACKET.md  ARCHITECTURE.md  BACKEND_DESIGN.md  CANONICALIZATION.md  CERTIFICATES.md  CHALLENGES.md  CIRCUIT_MANIFEST.md  CLAUDE_HANDOFF.md  CLOSED_Q_FORM.md  COMPILER_CANDIDATES.md  COMPILER_OPTIMIZER_PATH.md  COMPILER_PASS_PLAYGROUND.md  CORRELATION_STUDY.md  DECOMPOSITION.md  EXPORT_CIRCUIT.md  FACTORY_CANDIDATES.md  FIBER_LIFT.md  GEMINI_ASSESSMENT.md  GEMINI_SUMMARY.md  IMPACT_REGISTER.md  INSTALL_SMOKE.md  IR_METADATA.md  KERNEL_CENSUS.md  LIFT_PIPELINE.md  MAGICSCOUT.md  MAGIC_REPORTS.md  MAGIC_SEARCH.md  MAGIC_TEMPLATES.md  MAXSAT_EXPORT.md  NOVELTY_HYGIENE.md  PAPER_BENCHMARK_TABLES.md  PAULI_TABLE_ADAPTER.md  PRD_APPLICATION_WORKBENCH.md  PRD_COMPILER_MAGIC_FACTORY_BRIDGE.md  PROPOSITION_MAP.md  PUBLIC_REPO_STATUS.md  (+20 more)
examples/: activation_base_d4.json  application_packet_demo.json  circuit_manifest_d4_probe.json  compiler_after_qiskit_lite.json  compiler_before_qiskit_lite.json  compiler_candidate_corpus.json  duplicate_vectors_events_weyl.json  duplicate_vectors_weyl.json  factory_candidate_corpus.json  kernel_census_targets.json  kernel_theorem_pins.json  magic_backend_model.json  magic_portfolio.json  magic_protocol_distillation_stub.json  magic_protocol_pm_probe.json  magic_toy_protocol.json  noisy_pm.json  peres_mermin.json  peres_mermin_d4_trivial_lift.json  (+17 more)
(+192 files in other folders)
