[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qkernel"
version = "0.33.0"
description = "Contextuality kernel extraction for Weyl/Pauli measurement programs"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Manuel Flores Gordillo", email = "m.flores.gordillo@gmail.com" }
]
dependencies = ["sympy>=1.12"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
sat = ["python-sat[pblib,aiger]>=1.8.dev0"]

[project.scripts]
qkernel = "qkernel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
qkernel = ["py.typed"]
