[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qkernel"
version = "0.38.0"
description = "Contextuality kernel extraction for Weyl/Pauli measurement programs"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Manuel Flores Gordillo", email = "manuel.flores@columbia.edu" }
]
dependencies = ["sympy>=1.12"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
sat = ["python-sat[pblib,aiger]>=1.8.dev0"]
cpsat = ["ortools>=9.0"]
stim = ["stim>=1.14"]
hardware = ["qiskit>=1.0", "qiskit-ibm-runtime>=0.20"]

[project.scripts]
qkernel = "qkernel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: long-running tests (e.g. CP-SAT certification on dense families)"]
addopts = "-m \"not slow\""

[tool.setuptools.package-data]
qkernel = ["py.typed"]
